# rcg2data

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.am  README.md  cmake-config.h.in  configure.ac
src/: CMakeLists.txt  Makefile.am  abstract_printer.h  action_event.cpp  action_event.h  analysis_context.cpp  analysis_context.h  analysis_state.cpp  analysis_state.h  composite_handler.cpp  composite_handler.h  disp_handler.cpp  disp_handler.h  field_model.cpp  field_model.h  field_state.cpp  field_state.h  game_analyzer.cpp  game_analyzer.h  main.cpp  options.cpp  options.h  param_handler.cpp  param_handler.h  rcg_reader.cpp  rcg_reader.h  shoot.cpp  shoot.h  shoot_handler.cpp  shoot_handler.h
